--- a/src/css/default.css
+++ b/src/css/default.css
@@ -24,7 +24,9 @@ body{
     font-size:12px ;
     line-height: 1.5;
 }
-
+input{
+    font: inherit;
+}
 /* layout */
 .page{
     display: flex;
@@ -32,10 +34,12 @@ body{
 }
 .page > aside{
     width:200px ;
+    
    
 }
 .page >main{
     flex-grow: 1;
+    padding-left: 20px;
 }
 
 /* aside */
@@ -82,4 +86,51 @@ body{
 }
 .clickable{
     cursor: pointer;
+}
+
+/* main */
+.page >main{
+    background: #d4d4d4;
+}
+.form{
+ font-size: 14px;
+}
+.form > .row{
+    margin:10px 0 ;
+    display: flex;
+}
+.form > .row >label{
+    text-align: right;
+    width: 4em;
+    margin-right: 5px;
+    align-items: center;
+    display: flex;
+    justify-content: flex-end;
+}
+.form > .row.actions{
+    margin-left: calc(4em + 5px);
+}
+.form input[type=text]{
+    padding:3px 8px;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+    height:30px ;
+}
+.form input[type=button]{
+
+}
+.form input[type=submit]{
+    
+}
+.form button{
+    height: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 5px;
+}
+.page >main{
+    padding-top: 20px;
+}
+.page >main >.form{
+
 }
