--- a/src/css/default.css
+++ b/src/css/default.css
@@ -55,11 +55,13 @@ input{
 .newSong.active{
     background: #d4d4d4;
 }
+#songList-container{
+    flex-grow: 1;
+}
 
 .songList{
     text-align: left;
     border-top: 1px solid #999;
-    flex-grow: 1;
 }
 
 .songList > li{
